fix : extra padding in mobile screen
removed extra unwanted padding causing problem in mobile screens

--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ body {
 .footer-list {
     text-align: center;
     padding-inline-start: 0px;
-    padding-inline: 1rem;
 }
 
 
